--- a/Senai-Fit/application.properties
+++ b/Senai-Fit/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=org.postgresql.DriverStarting pgAdmin 4...
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-server.port = 8095
+server.port = 8080
